# shred-track

./: .env.local.example  .gitignore  CLAUDE.md  PRODUCT_MISSION_VISION.md  README.md  capacitor.config.ts  claude_pr_instructions.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: claude-pr-review.yml  deploy_database_migrations.yml
claude_code_instructions/: shredtrack-v1-spec.md
docs/developer/: ios_app_store_release.md
docs/gym-admin/: building-complex-workouts.md
native/WatchApp/: ShredTrackWatchApp.swift
public/: manifest.json  sw.js
scripts/: README.md  _mint-token-tmp.mjs  _set-sarah-password.mjs  _verify-clone-flow.mjs  _verify-templates-ui.mjs  audit-blended-days.ts  cleanup_outliers.sql  generate-logo-assets.sh  pyproject.toml  recover-orphaned-crossfit-scores.ts  run_sql.py  scrape_hyrox.py  test-scenarios.ts  train_models.py  verify-cascade.ts
scripts/app_store_screenshot_tool/: build_watch_screenshot.py
scripts/hyrox_scraper/: db.py  models.py  parser.py  selectors.py
src/: proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: providers.tsx  public-landing.tsx
src/db/: audit-blended-days.ts  extract-notes-once.ts  index.ts  inspect-orphaned-scores.ts  schema.ts  seed-benchmarks.ts  seed-hyrox-generic-plans.ts  seed.ts
src/emails/: activation.tsx  community-invite.tsx  family-invite.tsx  family-shadow-merged.tsx  magic-link.tsx  support-message.tsx  welcome.tsx
src/hooks/: useAdminAccess.ts  useBenchmarks.ts  useClasses.ts  useCoachMode.ts  useFamily.ts  (+38 more)
supabase/: config.toml
(+829 files in other folders)
